--- a/index.html
+++ b/index.html
@@ -73,17 +73,16 @@
         <h3>I'm Nassim</h3>
         <span class="tag">Full Stack Developer</span>
         
-        <p>I am a Full-Stack developer based in Meknés, Morocco,  
-           currently Software Engineering degree at ENSA degree at ENSA.
+        <p>I am a Full-Stack developer based in Meknès, Morocco,
+           currently pursuing a Software Engineering degree at ENSA.
            I am passionate about enhancing my coding skills and developing applications and websites.
-           I constantly seek out the latest advancements in technology.
-           Working for myself to improve my skills.
-           Love to build Full-Stack clones. </p>
+           Constantly seeking out the latest advancements in technology,
+           I am dedicated to improving my expertise. I also love building Full-Stack clones. </p>
         
         <div class="box-container">
             <div class="box">
               <p><span> age : </span> 22 </p>
-              <p><span> phone : </span> +212650547297 </p>
+              <p><span> phone : </span> +212XXXXXXXXX </p>
             </div> 
             <div class="box">
               <p><span> email : </span> nassimoulkq@gmail.com</p>
@@ -509,7 +508,7 @@
 
       <div class="box">
           <h3>contact info</h3>
-          <p> <i class="fas fa-phone"></i>+212650547297</p>
+          <p> <i class="fas fa-phone"></i>+212XXXXXXXXX</p>
           <p> <i class="fas fa-envelope"></i>nassimoulkq@gmail.com</p>
           <p> <i class="fas fa-map-marked-alt"></i>Meknés, morocco</p>
           <div class="share">
