adding Downloadable CV

--- a/index.html
+++ b/index.html
@@ -47,9 +47,8 @@
     </a>
     <div class="socials">
         <ul class="social-icons">
-          <li><a class="linkedin" aria-label="LinkedIn" href="" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
-          <li><a class="github" aria-label="GitHub" href="" target="_blank"><i class="fab fa-github"></i></a></li>
-          <li><a class="instagram" aria-label="Instagram" href=""><i class="fab fa-instagram" target="_blank"></i></a></li>
+          <li><a class="linkedin" aria-label="LinkedIn" href="https://www.linkedin.com/in/mohammed-homman" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
+          <li><a class="github" aria-label="GitHub" href="https://github.com/Mohammed-Homman" target="_blank"><i class="fab fa-github"></i></a></li>
         </ul>
       </div>
     </div>
@@ -88,7 +87,8 @@
         </div>
         
         <div class="resumebtn">
-          <a id="downloadBtn" href="https://drive.google.com/uc?export=download&id=1tx6llkC7wy5e32O5nNBwmAAvly8ACntV" class="btn" download>
+          <a id="downloadBtn" href="https://drive.google.com/file/d/1FeFSphz1puuTIBRLRnBiZ4n3ZD9ZmTIt/view?usp=sharing
+          " class="btn" download>
             <span>Download CV</span>
             <i class="fas fa-chevron-right"></i>
           </a>
@@ -234,6 +234,17 @@
       <h4>2019-2022 | Completed</h4>
       </div>
     </div>
+    <div class="box">
+      <div class="image">
+      <img draggable="false" src="./assets/images/educat/lycee.png" alt="">
+      </div>
+      <div class="content">
+      <h3>Imam Choutaibi High School</h3>
+      <p>Sciences Maths A · option Fr</p>
+      <p>Very good</p>
+      <h4>2017-2019 | Completed</h4>
+      </div>
+  </div>
 
 </div>
 </section>
@@ -439,10 +450,8 @@
           <p> <i class="fas fa-map-marked-alt"></i>Fez, morocco</p>
           <div class="share">
 
-              <a href="" class="fab fa-linkedin" aria-label="LinkedIn" target="_blank"></a>
-              <a href="" class="fab fa-github" aria-label="GitHub" target="_blank"></a>
-              <a href="" class="fas fa-envelope" aria-label="Mail" target="_blank"></a>
-              <a href="" class="fab fa-telegram-plane" aria-label="Telegram" target="_blank"></a>
+              <a href="https://www.linkedin.com/in/mohammed-homman" class="fab fa-linkedin" aria-label="LinkedIn" target="_blank"></a>
+              <a href="https://github.com/Mohammed-Homman" class="fab fa-github" aria-label="GitHub" target="_blank"></a>
           </div>
       </div>
   </div>
