--- a/index.html
+++ b/index.html
@@ -318,6 +318,21 @@
         </div>
       </div>
     </div>
+    <div class="box tilt">
+      <img draggable="false" src="./assets/images/projects/ecommerce.jpg" alt="" />
+      <div class="content">
+        <div class="tag">
+        <h3>Application Web de Cryptomonnaies en Temps Réel</h3>
+        </div>
+        <div class="desc">
+          <p>Développement d'une application en temps réel avec Next.js et React pour afficher un catalogue de cryptomonnaies. L'application utilise l'API CoinGecko pour fournir des informations actualisées et permet aux utilisateurs de consulter les détails de chaque monnaie et de filtrer les résultats..</p>
+          <div class="btns">
+            <a href="https://coins-catalog-olive.vercel.app/coins" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
     
 </section>
 
