adding a new project

--- a/index.html
+++ b/index.html
@@ -265,7 +265,10 @@
         <h3>Refente de la plateforme française Adanev.com vers la version V2</h3>
         </div>
         <div class="desc">
-          <p>Refonte complète de la plateforme Adanev.com, améliorant l'expérience utilisateur et la scalabilité.</p>
+          <p>Refonte complète de la plateforme Adanev.com, améliorant l'expérience utilisateur et la scalabilité.
+            <br><span style="text-decoration: underline;">Env technique : <p>Spring Boot - NextJS - Microservices - PostgreSQL - Docker - Nexus - Jira </p></span> 
+
+          </p>
           <div class="btns">
             <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
             <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
@@ -280,7 +283,9 @@
         <h3>App de gestion du ministère d'Agriculture</h3>
         </div>
         <div class="desc">
-          <p>Création d'une application robuste pour la gestion des employés et équipements informatiques.</p>
+          <p >Création d'une application robuste pour la gestion des employés et équipements informatiques.
+            <br><span style="text-decoration: underline;">Env technique : <p>Php, MySql, Html, Css, Javascript </p></span> 
+          </p>
           <div class="btns">
             <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
             <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
@@ -295,7 +300,9 @@
         <h3>Réservation en ligne de terrains de Football</h3>
         </div>
         <div class="desc">
-          <p>Développement d’une plateforme innovante permettant aux utilisateurs de signaler et rejoindre des matchs en temps réel.</p>
+          <p>Développement d’une plateforme innovante permettant aux utilisateurs de signaler et rejoindre des matchs en temps réel.
+            <br><span style="text-decoration: underline;">Env technique : <p>Spring Boot - Angular - MySQL </p></span> 
+          </p>
           <div class="btns">
             <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
             <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
@@ -310,7 +317,9 @@
         <h3>Site de vente en ligne</h3>
         </div>
         <div class="desc">
-          <p>Conception du backend et gestion des échanges frontend-backend pour une application de commerce électronique.</p>
+          <p>Conception du backend et gestion des échanges frontend-backend pour une application de commerce électronique.
+            <br><span style="text-decoration: underline;">Env technique : <p>ASP.NET - ReactJS - SqlServer - Tailwind </p></span> 
+          </p>
           <div class="btns">
             <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
             <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
@@ -319,13 +328,14 @@
       </div>
     </div>
     <div class="box tilt">
-      <img draggable="false" src="./assets/images/projects/ecommerce.jpg" alt="" />
+      <img draggable="false" src="./assets/images/projects/Crypto_Catalog.png" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Application Web de Cryptomonnaies en Temps Réel</h3>
         </div>
         <div class="desc">
-          <p>Développement d'une application en temps réel avec Next.js et React pour afficher un catalogue de cryptomonnaies. L'application utilise l'API CoinGecko pour fournir des informations actualisées et permet aux utilisateurs de consulter les détails de chaque monnaie et de filtrer les résultats..</p>
+          <p>L'application utilise l'API CoinGecko pour fournir des informations actualisées et permet aux utilisateurs de consulter les détails de chaque monnaie et de filtrer les résultats. 
+            <br><span style="text-decoration: underline;">Env technique : <p>NextJS - CoinGeckoAPI </p></span> 
           <div class="btns">
             <a href="https://coins-catalog-olive.vercel.app/coins" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
             <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
