--- a/index.html
+++ b/index.html
@@ -259,20 +259,16 @@
   <div class="box-container">
 
     <div class="box tilt">
-      <img draggable="false" src="./assets/images/projects/Adanev.png" alt="" />
+      <img draggable="false" src="./assets/images/projects/adanv.png" alt="" />
       <div class="content">
         <div class="tag">
-        <h3>Refente de la plateforme française Adanev.com vers la version V2</h3>
+        <h3>Stage 4 mois : Refente de la plateforme française Adanev.com</h3>
         </div>
         <div class="desc">
           <p>Refonte complète de la plateforme Adanev.com, améliorant l'expérience utilisateur et la scalabilité.
             <br><span style="text-decoration: underline;">Env technique : <p>Spring Boot - NextJS - Microservices - PostgreSQL - Docker - Nexus - Jira </p></span> 
 
           </p>
-          <div class="btns">
-            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
-          </div>
         </div>
       </div>
     </div>
@@ -280,16 +276,12 @@
       <img draggable="false" src="./assets/images/projects/ministry_pic.png" alt="" />
       <div class="content">
         <div class="tag">
-        <h3>App de gestion du ministère d'Agriculture</h3>
+        <h3>Stage 2 mois : App de gestion du ministère d'Agriculture</h3>
         </div>
         <div class="desc">
           <p >Création d'une application robuste pour la gestion des employés et équipements informatiques.
             <br><span style="text-decoration: underline;">Env technique : <p>Php, MySql, Html, Css, Javascript </p></span> 
           </p>
-          <div class="btns">
-            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
-          </div>
         </div>
       </div>
     </div>
@@ -304,14 +296,13 @@
             <br><span style="text-decoration: underline;">Env technique : <p>Spring Boot - Angular - MySQL </p></span> 
           </p>
           <div class="btns">
-            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
             <a href="https://github.com/Mohammed-Homman/Application_Reservation_Football" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
       </div>
     </div>
     <div class="box tilt">
-      <img draggable="false" src="./assets/images/projects/ecommerce.jpg" alt="" />
+      <img draggable="false" src="./assets/images/projects/Manzo.png" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Site de vente en ligne</h3>
@@ -321,8 +312,8 @@
             <br><span style="text-decoration: underline;">Env technique : <p>ASP.NET - ReactJS - SqlServer - Tailwind </p></span> 
           </p>
           <div class="btns">
-            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+            <a href="https://github.com/Mohammed-Homman/E_commerce_site" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="https://github.com/Mohammed-Homman/E_commerce_site" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
       </div>
@@ -338,7 +329,6 @@
             <br><span style="text-decoration: underline;">Env technique : <p>NextJS - CoinGeckoAPI </p></span> 
           <div class="btns">
             <a href="https://coins-catalog-olive.vercel.app/coins" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
       </div>
