adding crypto project

--- a/index.html
+++ b/index.html
@@ -282,6 +282,9 @@
           <p >Création d'une application robuste pour la gestion des employés et équipements informatiques.
             <br><span style="text-decoration: underline;">Env technique : <p>Php, MySql, Html, Css, Javascript </p></span> 
           </p>
+          <div class="btns">
+            <a href="https://www.linkedin.com/in/mohammed-homman/overlay/experience/2285508948/multiple-media-viewer/?profileId=ACoAADXrAWgBR2Q6J7S5SIFsGxzAr_NAHuLZ4w4&treasuryMediaId=1731191621497" class="btn" target="_blank">Voir <i class="fas fa-code"></i></a>
+          </div>
         </div>
       </div>
     </div>
